Fixes dropdown menu inside chart-settings cutting off at the bottom

--- a/src/features/datavisualizer/VisualizationStep.css
+++ b/src/features/datavisualizer/VisualizationStep.css
@@ -52,6 +52,9 @@
     position: absolute;
     top: 0;
     left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     background-color: var(--background-color);
     border-radius: var(--border-radius);
     border: 1px solid var(--border-color);
@@ -60,6 +63,7 @@
 }
 
 .draggable-wrapper {
+    width: 100%;
     position: relative;
 }
 
@@ -162,6 +166,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
+    gap: .5rem;
     color: var(--action-color-dark);
 }
 
@@ -239,7 +244,13 @@ input[type=range]::-moz-range-thumb {
 
 .main-visualization .expandable-side-menu-content,
 .main-visualization .draggable-menu-content {
+    width: 100%;
     overflow: hidden;
+    flex-grow: 1;
+}
+
+.main-visualization .expandable-side-menu-content {
+    min-height: min(758px, 100vh);
 }
 
 .main-visualization .expandable-side-menu.expanded .expandable-side-menu-content {
